[package]
name = "core-dockpack"
version = "0.1.11"
edition = "2021"
description = "A library for unpacking files from Docker images"
license = "MIT"

[dependencies]
tar = "0.4.40"
serde_json = "1.0.115"
flate2 = "1.0.28"
# some core feautures (incl reading from a stream) are currently in pre-release
bollard = "0.19.0-rc1"
tokio = { version = "1.44.2", features = ["fs", "macros", "test-util"] }
futures-util = "0.3.31"
tokio-util = { version = "0.7.14", features = ["io"] }
tokio-tar = "0.3.1"
