[package]
name = "dockpack"
version = "0.1.13"
edition = "2021"
authors = ["Maxwell Flitton maxwellflitton@gmail.com"]
description = "Command line tool for unpacking files from Docker images"
license = "MIT"

[dependencies]
# core-dockpack = { version = "0.1.1" }
core-dockpack = { path = "../core-dockpack" }
clap = { version = "4.0", features = ["derive"] }
tokio = "1.44.2"

[[bin]]
name = "dockpack"
path = "src/main.rs"
