[project]
name = "pydockpack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tom", email = "tomburdge3@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pydockpack = "pydockpack:main"

[tool.maturin]
module-name = "pydockpack._core"
python-packages = ["pydockpack"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
]
